--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.2",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
     "styled-components": "^6.1.17",
     "validator": "^13.15.0"
   },
